2005-08-16  Shakti Sen <shprasad@novell.com>

	* addressbook/e-book-backend-exchange.c:
	Added new functions proppatch_im(), populate_im().
	In brief, contact editor (exchange) supports IM field.

	Fixes bug #257802.

2005-08-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.7
	* NEWS : Updated
	Updated the docs as well.

2005-08-05  Arunprakash <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder_info) : Reverted
	the changes for constructing the prefix, as the bug was somewhere else
	and got fixed. These changes are wrong and worked for certain cases.
	(stub_notification) : Added code to remove the folder entries from the
	folders hash in case of rename and delete operations. Otherwise they
	represent non-existent folders.
	* mail/mail-stub-exchange.c (init) : Changed to construct the hash 
	table with callback for destroying the values.`
	(get_folder_info) : Cleaned up logic to return the right list of 
	folders for the given store_flags, and setting the folder flags for
	each hierarchy.
	(delete_folder) (rename_folder) : Added code to update the 
	folders_by_name hash to have the valid values. The deleted and renamed
	folder's entries need to be cleaned up.
	(unsubscribe_folder) (is_subscribed_folder) : Modified to make them
	suitable for all personal, favorite and public hierarchies, as they
	are used by all of these hierarchies.
	Fixes #310726, #309439.
	
2005-08-02  Sarfraaz Ahmed <asarfraaz@novell.com>

	* mail/mail-stub-exchange.c (get_folder_info) : Fetch only mail type
	of folders for the mail component. Also cleaned up the logic for 
	identifying public and favorite folders. We should now be setting the 
	folder as inbox based on its uri, since a rescan on the account is 
	always changing the pointers.
	(unsubscribe_folder) : Change the path for the public folder to a 
	favorite folder manually in the backend, since the UI can only support
	a list of public folders.