@@ -1,5 +1,12 @@
 2005-08-16  Shakti Sen <shprasad@novell.com>
 
+	* addressbook/e-book-backend-exchange.c (proppatch_categories)
+	(populate_categories): Added support for categories.
+
+	Fixes bug #221030.
+
+2005-08-16  Shakti Sen <shprasad@novell.com>
+
 	* addressbook/e-book-backend-exchange.c:
 	Added new functions proppatch_im(), populate_im().
 	In brief, contact editor (exchange) supports IM field.
